gcc/testsuite/rust/rustc/ui/parser/recover/unicode-double-equals-recovery_dg.rs
const A: usize ⩵ 2;
// { dg-error "" "" { target *-*-* } .-1 }
// { dg-error "" "" { target *-*-* } .-2 }

